--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,10 @@
+<nav *ngIf="userService.visible">
 <header class="header">
     <h2>Beta Preview App</h2>
-        <a routerLink="/user-profile">View-Profile</a> | 
-        <a routerLink="/user-register">Register</a>
+        <!-- <a routerLink="/user-profile">View-Profile</a> |  -->
+        <a routerLink="/user-register">Register</a> |
+        <a routerLink="/user-login">Login</a> 
+       <!--  <a routerLink="/user-edit">Edit Profile</a> -->
 </header>
+</nav>
 
