--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,4 +1,5 @@
-<div *ngFor="let user of users | async">
+<app-user-home></app-user-home>
+<div class="container main-div col-4 justify-content-center">
     <div class="card divcard">
         <div class="card-body">
             <h5>User Profile</h5>
