--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,15 @@
-<nav *ngIf="userService.visible">
-<header class="header">
-    <h2>Beta Preview App</h2>
-        <!-- <a routerLink="/user-profile">View-Profile</a> |  -->
+<nav class="animated swing">
+<header class="header" *ngIf = "loginHeaderVisible">
+       <h2>Beta Preview App</h2>
         <a routerLink="/user-register">Register</a> |
         <a routerLink="/user-login">Login</a> 
-       <!--  <a routerLink="/user-edit">Edit Profile</a> -->
+</header>
+
+<header class="header" *ngIf = "userProfileVisible">
+    <h2>Beta Preview App</h2>
+        <a routerLink="/user-profile"><i class="fas fa-user-circle"></i>View-Profile</a> | 
+        <a routerLink="/user-edit">Edit Profile</a> |
+        <a [routerLink]="" (click) = "onLogout()" *ngIf = "userProfileVisible">Logout</a>
 </header>
 </nav>
 
