--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,8 +1,8 @@
 <app-user-home></app-user-home>
-<div class="container main-div col-4 justify-content-center">
-    <div class="card divcard">
-        <div class="card-body">
-            <h5>User Profile</h5>
+<div class="main-div">
+    <div class="card div-card">
+        <div class="card-body div-body">
+            <h5 class="h5">User Profile</h5>
             <p class="card-text">
                 Id: {{user.id}} <br>
                 First Name: {{user.firstName}}<br>
